--- a/index.html
+++ b/index.html
@@ -40,42 +40,42 @@
       <section class="digits">
         <h2 class="section-title digits__section-title">Цифры и факты</h2>
         <p class="section-subtitle digits__section-subtitle">Про учёбу и мозг</p>
-        <div class="table digits__table">
-          <div class="table__cell">
-            <h3 class=" heading table__heading">86 миллиардов</h3>
-            <p class="text table__text">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="heading table__heading">2.1 миллиарда</h3>
-            <p class="text table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="text table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="heading table__heading">1000 терабайт</h3>
-            <p class="text table__text">Объём памяти человека</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="heading table__heading">500 триллионов</h3>
-            <p class="text table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="heading table__heading">420 миллионов</h3>
-            <p class="text table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="text table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="heading table__heading">17–20 лет</h3>
-            <p class="text table__text">Пик обучаемости</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="heading table__heading">1885 год</h3>
-            <p class="text table__text">Открытие кривой забывания</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="headnig table__heading">1889 год</h3>
-            <p class="text table__text">Открытие условного рефлекса</p>
-          </div>
-        </div>
+        <ul class="table digits__table">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
@@ -88,77 +88,77 @@
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark kaufman__section-title">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark kaufman__section-subtitle">от Джоша Кауфмана</p>
-        <div class="table table_theme_dark kaufman__table">
-          <div class="table__cell_theme_dark">
-            <h3 class="headnig table__heading_theme_dark">1</h3>
-            <p class="text table__text_theme_dark">Выберите привлекательный проект.</p>
-          </div>
-          <div class="table__cell_theme_dark">
-            <h3 class="heading table__heading_theme_dark">2</h3>
-            <p class="text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell_theme_dark">
-            <h3 class="heading table__heading_theme_dark">3</h3>
-            <p class="text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell_theme_dark">
-            <h3 class="heading table__heading_theme_dark">4</h3>
-            <p class="text table__text_theme_dark">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell_theme_dark">
-            <h3 class="heading table__heading_theme_dark">5</h3>
-            <p class="text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-          </div>
-          <div class="table__cell_theme_dark">
-            <h3 class="heading table__heading_theme_dark">6</h3>
-            <p class="text table__text_theme_dark">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell_theme_dark">
-            <h3 class="heading table__heading_theme_dark">7</h3>
-            <p class="text table__text_theme_dark">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell_theme_dark">
-            <h3 class="heading table__heading_theme_dark">8</h3>
-            <p class="text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell_theme_dark">
-            <h3 class="heading table__heading_theme_dark">9</h3>
-            <p class="text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </div>
-          <div class="table__cell_theme_dark">
-            <h3 class="heading table__heading_theme_dark">10</h3>
-            <p class="text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-          </div>
-        </div>
+        <ul class="table table_theme_dark kaufman__table">
+          <li class=" table__cell table__cell_theme_dark">
+            <h3 class="table__headnig table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
         <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <p class="foother__author">© Бектемиров Тимур</p>
         </div>
-        <div class="footer__column_content_info">
+        <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <nav class="footer__column-links">
-              <a href="#" class="footer__column-link">Главная</a>
-              <a href="#" class="footer__column-link">Концепция</a>
-              <a href="#" class="footer__column-link">Наставники</a>
+              <a href="#" class="footer__column-link" target="_blank">Главная</a>
+              <a href="#" class="footer__column-link" target="_blank">Концепция</a>
+              <a href="#" class="footer__column-link" target="_blank">Наставники</a>
           </nav>
         </div>
-        <div class="footer__column_content_social">
+        <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__column-links">
-            <a class="footer__column-link" href="#" lang="en">
+            <a class="footer__column-link" href="#" lang="en" target="_blank">
               <img class="footer__social-icon" src="./images/youtube_color_white.svg" alt="Иконка Ютуба">
               YouTube
             </a>
-            <a class="footer__column-link"  href="#">
+            <a class="footer__column-link"  href="#" target="_blank">
               <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка ВК">
               ВКонтакте
             </a>
-            <a class="footer__column-link" href="#" lang="en">
+            <a class="footer__column-link" href="#" lang="en" target="_blank">
               <img class="footer__social-icon" src="./images/tiktok_color_white.svg" alt="Иконка ТикТока">
               TikTok
             </a>
