--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href="#"> Узнать →</a></p>
       <div class="header__main-illustration"></div>
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -35,6 +35,69 @@
 
 
         </div>
+      </section>
+
+      <section class="techniques">
+        <h2 class="section-title techniques__section-title">Техники обучения</h2>
+        <p class="section-subtitle techniques__section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards techniques__cards">
+          <li class="cards__item">
+            <img src="./images/cards-attention.png" alt="Фоновая картинка" class="cards__image">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать 
+              сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-recall.png" alt="Фоновая картинка" class="cards__image">
+            <h3 class="cards__title" lang="en">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить 
+              разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-interliving.png" alt="Фоновая картинка" class="cards__image">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, 
+              они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-question.png" alt="Фоновая картинка" class="cards__image">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, 
+              который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img src="./images/cards-competence.png"  alt="Фоновая картинка"  class="cards__image">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title video__section-title">Видео нa TED</h2>
+        <p class="section-subtitle video__section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" class="video__iframe"></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <div class="two-columns oakley__two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя 
+              законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, 
+              тобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по 
+              службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если 
+              вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее →</a>
+        <img class="feynman__image" src="./images/feynman.png" alt="Внешность Ричарда Фейнмана">
       </section>
 
       <section class="digits">
@@ -78,11 +141,22 @@
         </ul>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее →</a>
-        <img class="feynman__image" src="./images/feynman.png" alt="Внешность Ричарда Фейнмана">
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <blockquote class="khan__quote" cite="Джордж Лукас">Страсть и новаторство Сала Хана меняют процесс обучения 
+            миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно 
+            прочитать всем, кто занимается образованием — так учащиеся повсюду смогут 
+            получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          </blockquote>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="./images/khan-book.jpg" alt="Обложка книги: Весь мир - школа" class="khan__book-pic">
+            <a href="#" class="khan__buy-link" target="_blank">Купить книгу →</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
@@ -130,8 +204,28 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
+
+      <section class="resources">
+        <h2 class="section-title resources__section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle resources__section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <nav class="resources__logo-zone">
+          <a href="#" class="resources__link" target="_blank">
+            <img src="./images/logo/resources-arzamas.svg" alt="Лого сайта - Арзамас" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link" target="_blank">
+            <img src="./images/logo/resources-n1.svg" alt="Лого сайта - Н1" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link" target="_blank">
+            <img src="./images/logo/resources-polka.svg" alt="Лого сайта - Полка" class="resources__logo">
+          </a>
+          <a href="#" class="resources__link" target="_blank">
+            <img src="./images/logo/resources-strelka.svg" alt="Лого сайта - Стрелка" class="resources__logo">
+          </a>
+        </nav>
+      </section>
+
     </main>
     <footer class="footer">
       <div class="footer__columns">
