--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="keywords" content="HTML5, CSS">
   <meta name="author" content="Бектемиров Тимур">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
@@ -77,8 +76,8 @@
         <h2 class="section-title video__section-title">Видео нa TED</h2>
         <p class="section-subtitle video__section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" class="video__iframe"></iframe>
-          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/5MgBikgcWnY" class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" class="video__iframe"></iframe>
         </div>
       </section>
 
@@ -90,7 +89,10 @@
               законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, 
               тобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по 
               службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если 
-              вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+              вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
@@ -145,7 +147,7 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <blockquote class="khan__quote" cite="Джордж Лукас">Страсть и новаторство Сала Хана меняют процесс обучения 
+          <blockquote class="khan__quote" cite="Джордж_Лукас">Страсть и новаторство Сала Хана меняют процесс обучения 
             миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно 
             прочитать всем, кто занимается образованием — так учащиеся повсюду смогут 
             получить навыки и знания, которые приносят успех в школе, карьере и жизни.
@@ -162,7 +164,7 @@
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark kaufman__section-title">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark kaufman__section-subtitle">от Джоша Кауфмана</p>
-        <ul class="table table_theme_dark kaufman__table">
+        <ul class="table table_theme_dark">
           <li class=" table__cell table__cell_theme_dark">
             <h3 class="table__headnig table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
