исправление ошибок валидации

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <p class="section-subtitle section-subtitle_theme_dark kaufman__section-subtitle">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class=" table__cell table__cell_theme_dark">
-            <h3 class="table__headnig table__heading_theme_dark">1</h3>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
@@ -233,7 +233,7 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <p class="foother__author">© Бектемиров Тимур</p>
+          <p class="footer__author">© Бектемиров Тимур</p>
         </div>
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
