--- a/index.html
+++ b/index.html
@@ -41,31 +41,31 @@
         <p class="section-subtitle techniques__section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards techniques__cards">
           <li class="cards__item">
-            <img src="./images/cards-attention.png" alt="Фоновая картинка" class="cards__image">
+            <img src="./images/cards-attention.png" alt="Карточка - Внимание" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать 
               сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
-            <img src="./images/cards-recall.png" alt="Фоновая картинка" class="cards__image">
+            <img src="./images/cards-recall.png" alt="Карточка - Вспомнить" class="cards__image">
             <h3 class="cards__title" lang="en">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить 
               разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img src="./images/cards-interliving.png" alt="Фоновая картинка" class="cards__image">
+            <img src="./images/cards-interliving.png" alt="Карточка - Интерливинг" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, 
               они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img src="./images/cards-question.png" alt="Фоновая картинка" class="cards__image">
+            <img src="./images/cards-question.png" alt="Карточка - Вопросы" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, 
               который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img src="./images/cards-competence.png"  alt="Фоновая картинка"  class="cards__image">
+            <img src="./images/cards-competence.png"  alt="Карточка - Компетентность"  class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
@@ -152,7 +152,7 @@
             прочитать всем, кто занимается образованием — так учащиеся повсюду смогут 
             получить навыки и знания, которые приносят успех в школе, карьере и жизни.
           </blockquote>
-          <p class="khan__quote-author">Джордж Лукас</p>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" alt="Обложка книги: Весь мир - школа" class="khan__book-pic">
@@ -212,7 +212,7 @@
       <section class="resources">
         <h2 class="section-title resources__section-title">Полезные ресурсы</h2>
         <p class="section-subtitle resources__section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <nav class="resources__logo-zone">
+        <div class="resources__logo-zone">
           <a href="#" class="resources__link" target="_blank">
             <img src="./images/logo/resources-arzamas.svg" alt="Лого сайта - Арзамас" class="resources__logo">
           </a>
@@ -225,7 +225,7 @@
           <a href="#" class="resources__link" target="_blank">
             <img src="./images/logo/resources-strelka.svg" alt="Лого сайта - Стрелка" class="resources__logo">
           </a>
-        </nav>
+        </div>
       </section>
 
     </main>
